k8s/05-operator.yaml
# 4) Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray-operator
  namespace: xray-api
spec:
  replicas: 1
  selector:
    matchLabels: { app: xray-operator }
  template:
    metadata:
      labels: { app: xray-operator }
    spec:
      serviceAccountName: xray-operator-sa
      automountServiceAccountToken: true       
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: operator
          image: xray-operator:0.0.1
          imagePullPolicy: IfNotPresent
          command: ["kopf"]
          args:
          - run
          - --standalone
          - --namespace=xray-api         
          - --log-format=json            
          - --verbose                    
          - main.py
          securityContext:
            runAsNonRoot: true
            runAsUser: 10002
            runAsGroup: 10002
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
